Dependency update for Trixie

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
         "../development/docker-compose.dev.yml",
     ],
     "features": {
-        "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {}
+        // "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {}
     },
     "service": "nautobot",
     "shutdownAction": "stopCompose",
