--- a/pyproject.toml
+++ b/pyproject.toml
@@ -146,6 +146,7 @@ social-auth-core = {version = "~4.8.3", optional = true, extras = ["saml"]}
 social-auth-app-django = "~5.4.3"
 # Rendering of SVG images (for rack elevations, etc.)
 svgwrite = "~1.4.3"
+django-polymorphic = "^4.10.5"
 
 [tool.poetry.extras]
 all = ["django-auth-ldap", "django-storages", "mysqlclient", "napalm", "social-auth-core"]
